# gopher

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  docs.yml  publish.yml  tests.yml
api/: index.html
docs/: api.md  api_test.md  examples.md  index.md  vignettes.ipynb
docs/static/: prot_quant.txt
docs/stylesheets/: extra.css
examples/: index.html
gopher/: __init__.py  annotations.py  config.py  display_data.py  enrichment.py  gopher.py  graph_search.py  mannwhitneyu.py  normalize.py  numba_function.py  ontologies.py  stats.py  tree_search.py  utils.py  version.py
gopher/fasta/: __init__.py  contaminants.fasta
gopher/parsers/: __init__.py  encyclopedia.py  tabular.py
search/: search_index.json
src/gopher/: __init__.py  annotations.py  config.py  display_data.py  enrichment.py  gopher.py  graph_search.py  normalize.py  ontologies.py  stats.py  tree_search.py  utils.py  version.py
src/gopher/parsers/: __init__.py  tabular.py
tests/: conftest.py
tests/data/: df.csv  small-human.fasta  yeast_small.csv
tests/unit_tests/: annotations_test.py  display_data_test.py  enrichment_test.py  graph_test.py  normalize_test.py  tabular_test.py  test_version.py  tree_test.py
vignettes/: index.html
