[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "gopher"
authors = [{name = "Carolyn Allen", email = "callen@talus.bio"}]
description = "Fast GO Enrichment for Quantitative Proteomic Data"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.6"

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/TalusBio/gopher"
Documentation = "https://TalusBio.github.io/gopher"
"Bug Tracker" = "https://github.com/TalusBio/gopher/issues"
"Discussion Board" = "https://github.com/TalusBio/gopher/discussions"


[project.optional-dependencies]
docs = [
    "mkdocs>=1.3.0",
    "mkdocstrings[python]>=0.18.1",
    "mkdocs-material>=8.2.1",
    "mkdocs-jupyter>=0.20.1",
    "ipykernel>=6.12.1",
]
dev = [
    "pre-commit>=2.7.1",
    "black>=19.10b0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
