[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[project]
authors = [
  {name = "Lilly Tatka", email = "ltatka@talus.bio"},
  {name = "William E Fondrie", email = "wfondrie@talus.bio"},
  {name = "Carolyn Allen", email = "callen@talus.bio"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy>=2.0",
  "pandas",
  "scipy>=1.7.1",
  "statsmodels",
  "requests",
  "numba",
  "seaborn",
  "biopython"
]
description = "Gene ontology enrichment analysis using protein expression."
dynamic = ["version"]
license = {text = "Apache 2.0"}
name = "gopher-enrich"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pre-commit>=2.7.1",
  "ruff",
  "pytest"
]
docs = [
  "numpydoc>=1.0.0",
  "sphinx-argparse>=0.2.5",
  "pydata-sphinx-theme>=0.4.3",
  "nbsphinx>=0.7.1",
  "ipykernel>=5.3.0",
  "recommonmark>=0.5.0"
]

[project.scripts]
gopher = "gopher.gopher:main"

[project.urls]
"Bug Tracker" = "https://github.com/TalusBio/gopher/issues"
"Discussion Board" = "https://github.com/TalusBio/gopher/discussions"
"Documentation" = "https://TalusBio.github.io/gopher"
"Homepage" = "https://github.com/TalusBio/gopher"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# D213 Multi-line docstring summary should start at the second lin
# D203 1 blank line required before class docstring
# D100 Missing docstring in public module
# D401 First line of docstring should be in imperative mood
ignore = ["D213", "D203", "D100", "D401"]
select = ["E", "F", "W", "C", "I", "D", "UP", "N", "T20"]

[tool.ruff.lint.per-file-ignores]
"*tests/*.py" = ["ANN", "N806", "C408"]
"__init__.py" = ["F401", "D104"]

[tool.setuptools_scm]
