[metadata]
name = gopher-enrich
author = William E Fondrie
author_email = fondriew@gmail.com
description = Gene ontology enrichment analysis using protein expression.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TalusBio/gopher
project_urls =
    Documentation = https://TalusBio.github.io/gopher
    Bug Tracker = https://github.com/TalusBio/gopher/issues
    Discussion Board = https://github.com/TalusBio/gopher/discussions
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    scipy>=1.7.1
    statsmodels
    requests
    biopython

[options.extras_require]
docs =
    numpydoc>=1.0.0
    sphinx-argparse>=0.2.5
    pydata-sphinx-theme>=0.4.3
    nbsphinx>=0.7.1
    ipykernel>=5.3.0
    recommonmark>=0.5.0
dev =
    pre-commit>=2.7.1
    black>=19.10b0

[options.entry_points]
console_scripts =
    gopher = gopher.gopher:main
